# quotes-v2

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 0001_init.sql
backend/src/: config.rs  db.rs  email.rs  error.rs  main.rs  models.rs  state.rs  storage.rs  tokens.rs  util.rs
backend/src/auth/: extractor.rs  jwt.rs  mod.rs  password.rs  routes.rs
backend/src/email/templates/: invite.mjml  reset_password.mjml  verify_email.mjml
backend/src/repo/: mod.rs
backend/src/routes/: attachments.rs  books.rs  invites.rs  members.rs  mod.rs  quotes.rs  share_links.rs
quota-flutter/: .gitignore  LICENSE  PRIVACY.md  README.md  pubspec.yaml
quota-flutter/android/app/: build.gradle
quota-flutter/ios/Runner/: Info.plist
quota-flutter/ios/Runner.xcodeproj/: project.pbxproj
quota-flutter/lib/: contants.dart  main.dart
quota-flutter/lib/api/: client.dart  models.dart
quota-flutter/lib/pages/: add_quote_page.dart  book_page.dart  books_page.dart  login_page.dart  quote_fullscreen_page.dart  settings_page.dart  splash_page.dart
quota-flutter/lib/state/: books_model.dart  offline_cache.dart  quotes_model.dart
quota-flutter/lib/utils/: pick_images.dart  scenic_image.dart
quota-flutter/lib/widgets/: attachments.dart  book.dart  book_args.dart  join_book.dart  new_book.dart  offline_banner.dart  quote.dart  quote_remove.dart  share_links_section.dart  (+1 more)
quote-website/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  quotes.json
quote-website/src/: app.d.ts
(+26 files in other folders)
