[package]
name = "quotes-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quotes-backend"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart", "macros"] }
base64 = "0.22.1"
bcrypt = "0.19.2"
chacha20poly1305 = "0.11.0"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
mime_guess = "2.0.5"
mrml = "5.1.0"
native-tls = "0.2.14"
postgres-native-tls = "0.5.1"
rand = "0.10.2"
resend-rs = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-postgres = "0.7.18"
tower-http = { version = "0.7.0", features = ["cors", "trace", "limit", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
turso = "=0.7.0-pre.13"
uuid = { version = "1.23.4", features = ["v4"] }
